--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,18 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+- none
 
-pool:
-  vmImage: ubuntu-latest
+stages:
+- stage: Main
+  displayName: "The main and only job"
+  pool:
+    vmImage: ununtu-latest
+  jobs:
+  - job:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '5.0.x'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+      
