--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,28 @@ stages:
           packageType: 'sdk'
           version: '5.0.x'
 
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'restore'
+          projects: '**/*.csproj'
+      
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'build'
+          projects: '**/*.csproj'
+          arguments: '--no-restore --configuration release'
+        
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'publish'
+          publishWebProjects: true
+          arguments: '--no-build --configuration release --output $(Build.ArtifactStagingDirectory)'
+          modifyOutputPath: false
+        
+      - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: 'drop'
+          publishLocation: 'Container'
+
       
